--- a/_layouts/_details.html
+++ b/_layouts/_details.html
@@ -17,7 +17,7 @@
       <td class="basic_text">
         <span id="Detail_lbl_sbj_area_name" style="font: medium 'Meiryo', normal;"></span>&nbsp;
       </td>
-      <td bgcolor="#48851d" class="basic_title" id="Detail_lblReqName">選択必修</td>
+      <td class="basic_title" id="Detail_lblReqName">選択必修</td>
       <td class="basic_text">
         <span id="Detail_lbl_req_name" style="font: medium 'Meiryo', normal;"></span>&nbsp;
       </td>
