--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <title>{{ page.title | default: site.title | default: site.github.repository_name }}</title>
     <meta charset="UTF-8">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
