--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -5,6 +5,6 @@ layout: default
 
 <ul>
   {% for item in page.items %}
-    <li></li>
+    <li><a href="{{ item.href }}">{{ item.value }}</a></li>
   {% endfor %}
 </ul>
