--- a/_layouts/syllabus_details.html
+++ b/_layouts/syllabus_details.html
@@ -10,7 +10,7 @@ layout: default
     </tr>
     <tr>
       <td colspan="6" class="basic_text">
-        <span id="Detail_lbl_sbj_name">{{ page.contents.name.jp }}</span>
+        <span id="Detail_lbl_sbj_name">{{ page.contents.name.ja }}</span>
         &nbsp;
         <span id="Detail_lbl_sbj_name_e">[{{ page.contents.name.en }}]</span>
       </td>
@@ -36,7 +36,7 @@ layout: default
       </td>
       <td class="basic_title" id="Detail_lblGradD">{{ page.texts.grades }}</td>
       <td class="basic_text">
-        <span id="Detail_lbl_grad_min">{{ page.contents.grades_start }}</span>～<span id="Detail_lbl_grad_max">{{ page.contents.grades_end }}</span>&nbsp;
+        <span id="Detail_lbl_grad_min">{{ page.contents.grades.min }}</span>～<span id="Detail_lbl_grad_max">{{ page.contents.grades.max }}</span>&nbsp;
       </td>
       <td class="basic_title" id="Detail_lblLctTermName">{{ page.texts.semester }}</td>
       <td class="basic_text">
@@ -58,7 +58,7 @@ layout: default
     </tr>
     <tr>
       <td colspan="6" class="basic_text">
-        <span id="Detail_lbl_staff_name">{{ page.contents.instructor.jp }}</span>
+        <span id="Detail_lbl_staff_name">{{ page.contents.instructor.ja }}</span>
         &nbsp;
         <span id="Detail_lbl_staff_name_e">[{{ page.contents.instructor.en }}]</span>
       </td>
