add <br> to below the table

--- a/_layouts/syllabus_details.html
+++ b/_layouts/syllabus_details.html
@@ -87,7 +87,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="details_outline" class="syl_contents">{{ page.contents.course_description }}</span>
+        <span id="details_outline" class="syl_contents">{{ page.contents.course_description | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -95,7 +95,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_standard" class="syl_contents">{{ page.contents.expected_learning }}</span>
+        <span id="Detail_lbl_standard" class="syl_contents">{{ page.contents.expected_learning | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -103,7 +103,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_schedule" class="syl_contents">{{ page.contents.course_schedule }}</span>
+        <span id="Detail_lbl_schedule" class="syl_contents">{{ page.contents.course_schedule | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -111,7 +111,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_requirements" class="syl_contents">{{ page.contents.prerequisites }}</span>
+        <span id="Detail_lbl_requirements" class="syl_contents">{{ page.contents.prerequisites | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -119,7 +119,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_text_book" class="syl_contents">{{ page.contents.texts_and_materials }}</span>
+        <span id="Detail_lbl_text_book" class="syl_contents">{{ page.contents.texts_and_materials | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -127,7 +127,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_reference_book" class="syl_contents">{{ page.contents.references }}</span>
+        <span id="Detail_lbl_reference_book" class="syl_contents">{{ page.contents.references | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -135,7 +135,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_grading" class="syl_contents">{{ page.contents.assessment }}</span>
+        <span id="Detail_lbl_grading" class="syl_contents">{{ page.contents.assessment | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -143,7 +143,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_something" class="syl_contents">{{ page.contents.message_from_instructor }}</span>
+        <span id="Detail_lbl_something" class="syl_contents">{{ page.contents.message_from_instructor | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -151,7 +151,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_keyword" class="syl_contents">{{ page.contents.course_keywords }}</span>
+        <span id="Detail_lbl_keyword" class="syl_contents">{{ page.contents.course_keywords | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -159,7 +159,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_office_hours" class="syl_contents">{{ page.contents.office_hours }}</span>
+        <span id="Detail_lbl_office_hours" class="syl_contents">{{ page.contents.office_hours | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -167,7 +167,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_note1" class="syl_contents">{{ page.contents.remarks_1 }}</span>
+        <span id="Detail_lbl_note1" class="syl_contents">{{ page.contents.remarks_1 | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -175,7 +175,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_note2" class="syl_contents">{{ page.contents.remarks_2 }}</span>
+        <span id="Detail_lbl_note2" class="syl_contents">{{ page.contents.remarks_2 | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -183,7 +183,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_url" class="syl_contents">{{ page.contents.related_url }}</span>
+        <span id="Detail_lbl_url" class="syl_contents">{{ page.contents.related_url | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -191,7 +191,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_num_language_name" class="syl_contents">{{ page.contents.course_language }}</span>
+        <span id="Detail_lbl_num_language_name" class="syl_contents">{{ page.contents.course_language | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -199,7 +199,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_num_sbj_name" class="syl_contents">{{ page.contents.taught_language }}</span>
+        <span id="Detail_lbl_num_sbj_name" class="syl_contents">{{ page.contents.taught_language | newline_to_br }}</span>
       </td>
     </tr>
     <tr>
@@ -207,7 +207,7 @@ layout: default
     </tr>
     <tr>
       <td class="det_content">
-        <span id="Detail_lbl_update_dt" class="syl_contents">{{ page.contents.last_update }}</span>
+        <span id="Detail_lbl_update_dt" class="syl_contents">{{ page.contents.last_update | newline_to_br }}</span>
       </td>
     </tr>
 
