--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    {% if site.google_site_verification %}
+      <meta name="google-site-verification" content="{{ site.google_site_verification }}" />
+    {% endif %}
   </head>
   <body>
     <header class="page-header" role="banner">
