--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | page.html_lang | default: "en-US" }}">
   <head>
     <title>{{ page.title | default: site.title | default: site.github.repository_name }}</title>
     <meta charset="UTF-8">
